apps/web/src/app/(docs)/docs/sdk-reference/cli/v1.3.4/template/page.mdx
## neopilot template


manage sandbox templates

### Usage

```bash
neopilot template [options] [command]
```
## neopilot template build


build sandbox template defined by ./neopilot.Dockerfile or ./Dockerfile in root directory. By default the root directory is the current working directory. This command also creates neopilot.toml config.

### Usage

```bash
neopilot template build [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `-d, --dockerfile <file>: specify path to Dockerfile. By default NEOPILOT tries to find neopilot.Dockerfile or Dockerfile in root directory. `
 - `-n, --name <template-name>: specify sandbox template name. You can use the template name to start the sandbox with SDK. The template name must be lowercase and contain only letters, numbers, dashes and underscores. `
 - `-c, --cmd <start-command>: specify command that will be executed when the sandbox is started. `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the NEOPILOT dashboard (https://neopilot.dev/dashboard?tab=team). `
 - `--config <neopilot-toml>: specify path to the NEOPILOT config toml. By default NEOPILOT tries to find ./neopilot.toml in root directory. `
 - `--cpu-count <cpu-count>: specify the number of CPUs that will be used to run the sandbox. The default value is 2. `
 - `--memory-mb <memory-mb>: specify the amount of memory in megabytes that will be used to run the sandbox. Must be an even number. The default value is 512. `
 - `--build-arg <args...>: specify additional build arguments for the build command. The format should be <varname>=<value>. `


## neopilot template list


list sandbox templates

### Usage

```bash
neopilot template list [options]
```

### Options


 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the NEOPILOT dashboard (https://neopilot.dev/dashboard?tab=team). `


## neopilot template init


create basic NEOPILOT Dockerfile (./neopilot.Dockerfile) in root directory. You can then run neopilot template build to build sandbox template from this Dockerfile

### Usage

```bash
neopilot template init [options]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `


## neopilot template delete


delete sandbox template and neopilot.toml config

### Usage

```bash
neopilot template delete [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <neopilot-toml>: specify path to the NEOPILOT config toml. By default NEOPILOT tries to find ./neopilot.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the NEOPILOT dashboard (https://neopilot.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual delete confirmation `


## neopilot template publish


publish sandbox template

### Usage

```bash
neopilot template publish [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <neopilot-toml>: specify path to the NEOPILOT config toml. By default NEOPILOT tries to find ./neopilot.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the NEOPILOT dashboard (https://neopilot.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual publish confirmation `


## neopilot template unpublish


unpublish sandbox template

### Usage

```bash
neopilot template unpublish [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <neopilot-toml>: specify path to the NEOPILOT config toml. By default NEOPILOT tries to find ./neopilot.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the NEOPILOT dashboard (https://neopilot.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual unpublish confirmation `


